@@ -1,4 +1,4 @@
-Add getword(), setword(), operator^ and other common operators to BigInt
+Add getword(), setword(), and other common operators to BigInt
 
 Provide examples in the following man-pages:
 
