@@ -1,2 +1,2 @@
-VERSION=2.04.02
+VERSION=2.05.00
 YEARS=2005-2009
