@@ -1,8 +1,11 @@
 #include "bigint"
 
+#include <cstring>
+#include <cctype>
 #include <algorithm>
 #include <openssl/ui.h>
 #include <bobcat/errno>
+#include <bobcat/fnwrap1c>
 
 namespace FBB
 {
