@@ -1,8 +1,11 @@
 #!/bin/sh
 
-ln -s .. bobcat
+# ln -s .. bobcat
+# 
+# g++ -I. --std=c++0x -O2 -Wall -o driver driver.cc -lssl -lbobcat \
+#     -L../tmp -ldecryptbuf
+# 
+# rm bobcat
 
-g++ -I. --std=c++0x -O2 -Wall -o driver driver.cc -lssl -lbobcat \
-    -L../tmp -ldecryptbuf
-
-rm bobcat
+echo g++ --std=c++0x -O2 -Wall -o driver driver.cc -lbobcat 
+g++ --std=c++0x -O2 -Wall -o driver driver.cc -lbobcat 
