@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 
 # ln -s .. bobcat
 # ln -s ../ohexstreambuf/ohexstreambuf bobcat
@@ -8,8 +8,12 @@
 # 
 # rm bobcat/ohexstreambuf bobcat
 
+# echo g++ --std=c++0x -O2 -Wall -o driver driver.cc -lbobcat 
+# g++ --std=c++0x -O2 -Wall -o driver driver.cc -lbobcat 
+
 echo g++ -I. --std=c++0x -O2 -Wall -o driver driver.cc -L../tmp -lencryptbuf \
         -lssl -lbobcat
 
 g++ -I. --std=c++0x -O2 -Wall -o driver driver.cc -L../tmp -lencryptbuf \
         -lssl -lbobcat
+
