@@ -1,3 +1,13 @@
+bobcat (2.05.00)    ISN
+
+  * BigInt values inserted into streams do not print leading zeroes anymore
+  * BigInt values can be assigned a value from a textual representation
+  * BigInt values can be extracted from std::istream objects.
+  * Added MD_CTX initialization and cleanup calls to DigestBuf
+  * Added MD_CTX initialization call to HMacBuf
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 23 Sep 2009 15:32:48 +0200
+
 bobcat (2.04.02)
 
   * DateTime: DST updated by setXXX() members as well.
